tests/ui/imports/issue-114682-5.stderr
error[E0432]: unresolved import `issue_114682_5_extern_1::Url`
  --> $DIR/issue-114682-5.rs:10:5
   |
LL | use issue_114682_5_extern_1::Url;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `Url` in `types::issue_114682_5_extern_1`
   |
help: consider importing this struct instead
   |
LL | use ::issue_114682_5_extern_1::Url;
   |     ++

error[E0659]: `issue_114682_5_extern_1` is ambiguous
  --> $DIR/issue-114682-5.rs:10:5
   |
LL | use issue_114682_5_extern_1::Url;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
   = note: `issue_114682_5_extern_1` could refer to a crate passed with `--extern`
   = help: use `::issue_114682_5_extern_1` to refer to this crate unambiguously
note: `issue_114682_5_extern_1` could also refer to the module imported here
  --> $DIR/issue-114682-5.rs:9:5
   |
LL | use issue_114682_5_extern_2::p::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `issue_114682_5_extern_1` to disambiguate
   = help: or use `crate::issue_114682_5_extern_1` to refer to this module unambiguously

error: `issue_114682_5_extern_1` is ambiguous
  --> $DIR/issue-114682-5.rs:10:5
   |
LL | use issue_114682_5_extern_1::Url;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `issue_114682_5_extern_1` could refer to the module defined here
  --> $DIR/auxiliary/issue-114682-5-extern-2.rs:6:13
   |
LL |     pub use crate::types::*;
   |             ^^^^^^^^^^^^
note: `issue_114682_5_extern_1` could also refer to the crate defined here
  --> $DIR/auxiliary/issue-114682-5-extern-2.rs:7:13
   |
LL |     pub use crate::*;
   |             ^^^^^
   = help: use `::issue_114682_5_extern_1` to refer to this crate unambiguously
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0659.
For more information about an error, try `rustc --explain E0432`.
Future incompatibility report: Future breakage diagnostic:
error: `issue_114682_5_extern_1` is ambiguous
  --> $DIR/issue-114682-5.rs:10:5
   |
LL | use issue_114682_5_extern_1::Url;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `issue_114682_5_extern_1` could refer to the module defined here
  --> $DIR/auxiliary/issue-114682-5-extern-2.rs:6:13
   |
LL |     pub use crate::types::*;
   |             ^^^^^^^^^^^^
note: `issue_114682_5_extern_1` could also refer to the crate defined here
  --> $DIR/auxiliary/issue-114682-5-extern-2.rs:7:13
   |
LL |     pub use crate::*;
   |             ^^^^^
   = help: use `::issue_114682_5_extern_1` to refer to this crate unambiguously
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

